# P79_Cryptography_Engineering

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.go  Dockerfile.golab  README.md  Taskfile.yml  hello.py  pyproject.toml  run.sh
in_class/: hello.py  prng.py  pyproject.toml
lab0/: Dockerfile  README.md  pyproject.toml  run.sh
lab0/src/lab0/: __init__.py  digest.py
lab0/src/tests/: test_digest.py
lab0/tests/: test_digest.py
lab1/: README.md  __main__.py  pyproject.toml
lab1/src/lab1/: __init__.py  curve25519.py  ed25519.py  ed25519_base.py  errors.py  invalidation.py  limiter.py  x25519.py  x25519_base.py
lab1/tests/: __init__.py  test_ed25519.py  test_ed25519_calcs.py  test_epoint.py  test_x25519.py  test_x25519_calcs.py  test_x_primitives.py  x25519_test.json
lab2/: README.md  go.mod  go.sum  main.go  pyproject.toml
lab2/cert_auth/: ca.go  ca_test.go
lab2/sigma/: chat.go  chat_test.go  client.go  client_test.go  messages.go  messages_test.go  sigma.go  sigma_test.go
lab2/sigmachat/: chat.go  chat_test.go
lab2/spake2/: client.go  client_test.go  init.go  points.go  spake.go  spake_test.go
lab2/src/lab2/: __init__.py
lab2_go/: go.mod  main.go
lab2_go/cert_auth/: ca.go  ca_test.go
lab2_go/sigma/: client.go  client_test.go  messages.go  sigma.go
lab2_go/sigma_chat/: chat.go
lab3/: README.md  go.mod  main.go  pyproject.toml
lab3/simplepir/: distrib.go  distrib_test.go  mat.go  mat_test.go  pir.go  pir_test.go  vec.go  vec_test.go
lab3/src/lab3/: __init__.py
