[project]
name = "p79-cryptography-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lab0",
    "lab1",
    "lab2",
    "lab3",
    "mypy>=1.14.1",
    "mypy-extensions>=1.0.0",
    "pynacl>=1.5.0",
]

[tool.uv.workspace]
members = ["lab0", "lab1", "lab2", "lab3", "lab4"]

[tool.uv.sources]
lab0 = { workspace = true }
lab1 = { workspace = true }
lab2 = { workspace = true }
lab3 = { workspace = true }


[tool.ruff]
line-length = 109

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "D1", "D417", "D417", "D419"]

[tool.ruff.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]
"test_*.py" = ["D"]
