[project]
name = "p79-cryptography-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.12",
    "lab0",
    "lab1",
    "mypy>=1.14.1",
    "mypy-extensions>=1.0.0",
    "pynacl>=1.5.0",
]

[tool.uv.workspace]
members = ["lab0", "lab1", "lab4", "in_class"]

[tool.uv.sources]
lab0 = { workspace = true }
lab1 = { workspace = true }


[tool.ruff]
line-length = 109

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "D1", "D417", "D417", "D419"]

[tool.ruff.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all directories named `in_class`.
"in_class/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]
"test_*.py" = ["D"]
